--- a/server/.gitignore
+++ b/server/.gitignore
@@ -4,6 +4,7 @@
 /node_modules
 /.pnp
 .pnp.js
+/config
 
 # testing
 /coverage
@@ -18,7 +19,6 @@
 .env.test.local
 .env.production.local
 .env
-dev.js
 
 npm-debug.log*
 yarn-debug.log*
